feat: add gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,13 @@
 *.exe
 *.out
 *.app
+Kadai1/Kadai1.sln
+Kadai1/.vs/Kadai1/v16/Browse.VC.db
+Kadai1/.vs/Kadai1/v16/Browse.VC.db-shm
+Kadai1/.vs/Kadai1/v16/Browse.VC.opendb
+Kadai1/.vs/Kadai1/v16/ipch/AutoPCH/498d9e556533b9c3/KADAI1.ipch
+Kadai1/.vs/Kadai1/v16/ipch/AutoPCH/d24a655a07b634/KADAI1.ipch
+Kadai1/.vs/Kadai1/v16/Browse.VC.db-wal
+Kadai1/Kadai1/Kadai1.vcxproj
+Kadai1/Kadai1/Kadai1.vcxproj.filters
+Kadai1/Kadai1/Kadai1.vcxproj.user
