feat: add gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,6 @@ Kadai1/.vs/Kadai1/v16/Browse.VC.db-wal
 Kadai1/Kadai1/Kadai1.vcxproj
 Kadai1/Kadai1/Kadai1.vcxproj.filters
 Kadai1/Kadai1/Kadai1.vcxproj.user
+Kadai1/Kadai1/x64/Debug/
+Kadai1/.vs/
+Kadai1/x64/
