feat: add gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,5 @@ Kadai1/Kadai1/Kadai1.vcxproj.user
 Kadai1/Kadai1/x64/Debug/
 Kadai1/.vs/
 Kadai1/x64/
+Kadai1/Kadai1/x64/Release/Kadai1.log
+Kadai1/Kadai1/x64/
