--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,8 @@ Kadai1/.vs/
 Kadai1/x64/
 Kadai1/Kadai1/x64/Release/Kadai1.log
 Kadai1/Kadai1/x64/
+Kadai2/.vs/
+Kadai2/Kadai2.sln
+Kadai2/Kadai2/Kadai2.vcxproj
+Kadai2/Kadai2/Kadai2.vcxproj.filters
+Kadai2/Kadai2/Kadai2.vcxproj.user
