--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,5 @@ Kadai2/Kadai2.sln
 Kadai2/Kadai2/Kadai2.vcxproj
 Kadai2/Kadai2/Kadai2.vcxproj.filters
 Kadai2/Kadai2/Kadai2.vcxproj.user
+Kadai2/Kadai2/x64/
+Kadai2/x64/Debug/Kadai2.pdb
