feat: add gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,9 @@ Kadai2/Kadai2/Kadai2.vcxproj.filters
 Kadai2/Kadai2/Kadai2.vcxproj.user
 Kadai2/Kadai2/x64/
 Kadai2/x64/Debug/Kadai2.pdb
+*.db
+Kadai3/Kadai3/.vs/
+*.sln
+*.vcxproj
+*.filters
+*.user
