--- a/.gitignore
+++ b/.gitignore
@@ -30,28 +30,12 @@
 *.exe
 *.out
 *.app
-Kadai1/Kadai1.sln
-Kadai1/.vs/Kadai1/v16/Browse.VC.db
-Kadai1/.vs/Kadai1/v16/Browse.VC.db-shm
-Kadai1/.vs/Kadai1/v16/Browse.VC.opendb
-Kadai1/.vs/Kadai1/v16/ipch/AutoPCH/498d9e556533b9c3/KADAI1.ipch
-Kadai1/.vs/Kadai1/v16/ipch/AutoPCH/d24a655a07b634/KADAI1.ipch
-Kadai1/.vs/Kadai1/v16/Browse.VC.db-wal
-Kadai1/Kadai1/Kadai1.vcxproj
-Kadai1/Kadai1/Kadai1.vcxproj.filters
-Kadai1/Kadai1/Kadai1.vcxproj.user
-Kadai1/Kadai1/x64/Debug/
 Kadai1/.vs/
 Kadai1/x64/
-Kadai1/Kadai1/x64/Release/Kadai1.log
 Kadai1/Kadai1/x64/
 Kadai2/.vs/
-Kadai2/Kadai2.sln
-Kadai2/Kadai2/Kadai2.vcxproj
-Kadai2/Kadai2/Kadai2.vcxproj.filters
-Kadai2/Kadai2/Kadai2.vcxproj.user
 Kadai2/Kadai2/x64/
-Kadai2/x64/Debug/Kadai2.pdb
+Kadai2/x64/
 *.db
 Kadai3/Kadai3/.vs/
 *.sln
